--- a/themes/casper-v094/layouts/_default/single.html
+++ b/themes/casper-v094/layouts/_default/single.html
@@ -19,7 +19,15 @@
             </a>
         </header>
 
-        <span class="post-meta">{{if .Site.Params.author}}{{ .Site.Params.author }}, {{end}}<time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHtml }}">{{ .Date.Format "2 Jan 2006" }}</time>{{if .Params.tags }}On {{ .Params.tags }}{{end}}</span>
+        <span class="post-meta">{{if .Site.Params.author}}{{ .Site.Params.author }}, {{end}}<time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHtml }}">{{ .Date.Format "2 Jan 2006" }}</time>
+
+        {{if .Params.tags }}on 
+        {{ range $index, $tag := .Params.tags }}
+            <a href="/tags/{{ $tag | urlize }}">{{ $tag }}</a>,
+        {{ end }}
+        {{end}}
+
+        </span>
 
         <h1 class="post-title">{{ .Title }}</h1>
 
