--- a/themes/casper-v094/layouts/partials/header.html
+++ b/themes/casper-v094/layouts/partials/header.html
@@ -46,9 +46,9 @@
 
     </script>
 
-    <link rel="shortcut icon" href="{{ .Site.BaseUrl }}images/favicon.ico">
+    <link rel="shortcut icon" href="/images/favicon.ico">
 
-    <link rel="stylesheet" type="text/css" href="{{ .Site.BaseUrl }}css/screen.css" />
+    <link rel="stylesheet" type="text/css" href="/css/screen.css" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic|Open+Sans:700,400" />
     
 </head>
