--- a/themes/casper-v094/layouts/partials/footer.html
+++ b/themes/casper-v094/layouts/partials/footer.html
@@ -2,7 +2,7 @@
         <a class="subscribe icon-feed" href="{{ .RSSLink }}"><span class="tooltip">Subscribe!</span></a>
         <div class="inner">
              <section class="copyright">All content copyright <a href="{{ .Site.BaseUrl }}">{{.Site.Title}}</a> &copy; {{.Site.Copyright}}</section>
-             <section class="poweredby">Proudly published with <a href="http://gohugo.io">HUGO {{.Hugo.Version}}</a>, theme from <a class="icon-ghost" href="https://github.com/TryGhost/Casper">Ghost (Casper)</a> </section>
+             <section class="poweredby">Proudly published with <a href="http://gohugo.io">HUGO</a>, theme from <a class="icon-ghost" href="https://github.com/TryGhost/Casper">Ghost (Casper)</a> </section>
         </div>
     </footer>
 
