--- a/themes/casper/layouts/_default/li.html
+++ b/themes/casper/layouts/_default/li.html
@@ -1,22 +1,27 @@
-<article class="post">
+<article class="{{ .Type }}">
     <header class="post-header">
-        <h2 class="post-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+        <h2 class="post-title"><a href="{{ .RelPermalink }}">{{ .Title }}</a></h2>
     </header>
     <section class="post-excerpt">
-        <p>
-        {{ .Summary }} 
-        {{ if .Truncated }}
-        	<a class="read-more" href="{{ .Permalink }}">&raquo;</a>
-        {{ end }}
-        </p>
+        <p>{{ .Summary }} <a class="read-more" href="{{.RelPermalink}}">&raquo;</a></p>
     </section>
     <footer class="post-meta">
-        {{ .Site.Params.author }}
-        {{ .Params.tags }}
+        {{if .Site.Params.authorimage }}
+            <img class="author-thumb" src="{{.Site.Params.author.image}}" alt="Author image" nopin="nopin" />
+        {{end}}
+        {{if .Site.Params.author}}
+            {{.Site.Params.author}}
+        {{end}}
+        {{if .Params.tags }}on 
+            {{ range $index, $tag := .Params.tags }}
+                <a href="/tags/{{ $tag | urlize }}">{{ $tag }}</a>,
+            {{ end }}
+        {{end}}
         <time class="post-date" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHtml }}">
-          {{ .Date.Format "2 Jan 2006" }}
-         </time>
+            {{ .Date.Format "2 Jan 2006" }}
+        </time>
     </footer>
 </article>
+
 
 
