--- a/themes/casper/layouts/partials/header.html
+++ b/themes/casper/layouts/partials/header.html
@@ -5,23 +5,24 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-	<meta property="og:title" content="{{ if ne .Url "/" }} {{ .Title }} &middot; {{ end }} {{ .Site.Title }}" />
+  	<meta property="og:title" content="{{ if ne .Url "/" }} {{ .Title }} &middot; {{ end }} {{ .Site.Title }}" />
   	<meta property="og:site_name" content="{{ .Site.Title }}" />
   	<meta property="og:url" content="{{ .Permalink }}" />
     
     {{ if .IsPage }}
   	<meta property="og:type" content="article" />
   	{{ with .Site.Params.facebook }}
-	<meta property="og:article:author" content="https://facebook.com/{{ . }}" />
+	  <meta property="og:article:author" content="https://facebook.com/{{ . }}" />
   	{{ end }}
-<meta property="og:article:published_time" content="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHtml }}" />
-  {{ range .Params.tags }}
-  <meta property="og:article:tag" content="{{ . }}" />
-  {{ end }}
-  {{ else }}
-  <meta property="og:type" content="website" />
-  {{ end }}
 
+    <meta property="og:article:published_time" content="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHtml }}" />
+
+    {{ range .Params.tags }}
+    <meta property="og:article:tag" content="{{ . }}" />
+    {{ end }}
+    {{ else }}
+    <meta property="og:type" content="website" />
+    {{ end }}
 
   <title>
     {{ if ne .Url "/" }} {{ .Title }} &middot; {{ end }} {{ .Site.Title }}
@@ -32,15 +33,15 @@
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="shortcut icon" href="{{ .Site.BaseUrl }}images/favicon.ico">
-	  <link rel="apple-touch-icon" href="{{ .Site.BaseUrl }}images/apple-touch-icon.png" />
+    <link rel="shortcut icon" href="/images/favicon.ico">
+	  <link rel="apple-touch-icon" href="/images/apple-touch-icon.png" />
     
-    <link rel="stylesheet" type="text/css" href="{{ .Site.BaseUrl }}css/screen.css" />
+    <link rel="stylesheet" type="text/css" href="/css/screen.css" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
 
     <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
     
-    <meta name="generator" content="GOHUGO" />
+    {{.Hugo.Generator}}
 
     <link rel="canonical" href="http://vjeantet.fr/" />
     <script>
