--- a/layouts/partials/netlify.html
+++ b/layouts/partials/netlify.html
@@ -1,4 +1,4 @@
-<a rel="me" href="https://infosec.exchange/@vjeantet">Mastodon</a>
+<a rel="me" href="https://hachyderm.io/@vjeantet">Mastodon</a>
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 <script>
   if (window.netlifyIdentity) {
